sfSandBoxCode/force-app/main/default/objects/Government_Relations_Event__c/Government_Relations_Event__c.object-meta.xml
<CustomObject>
    <label>Government Relations Event</label>
    <nameField>
        <label>Government Relations Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Government Relations Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>