sfSandBoxCode/force-app/main/default/objects/Government_Relations_Event__c/fields/Action_Points__c.field-meta.xml
<CustomField>
    <fullName>Action_Points__c</fullName>
    <label>Action Points</label>
    <type>TextArea</type>
</CustomField>