sfSandBoxCode/force-app/main/default/objects/Government_Relations_Event__c/fields/GR_Stakeholder_Contact__c.field-meta.xml
<CustomField>
    <fullName>GR_Stakeholder_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GR Stakeholder Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Government Relations Events</relationshipLabel>
    <relationshipName>Government_Relations_Events</relationshipName>
    <type>Lookup</type>
</CustomField>