sfSandBoxCode/force-app/main/default/objects/Government_Relations_Event__c/fields/Key_Insights__c.field-meta.xml
<CustomField>
    <fullName>Key_Insights__c</fullName>
    <label>Key Insights</label>
    <type>TextArea</type>
</CustomField>