sfSandBoxCode/force-app/main/default/objects/Government_Relations_Event__c/fields/Number_of_Insights__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Insights__c</fullName>
    <label>Number of Insights</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>