sfSandBoxCode/force-app/main/default/objects/Government_Relations_Event__c/fields/Type_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Event__c</fullName>
    <label>Type of Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Community Forum</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Public Endorsement</fullName>
            </value>
            <value>
                <fullName>Public Representation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>