sfSandBoxCode/force-app/main/default/objects/Government_Relations_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>GR_Stakeholder_Contact__c</columns>
    <columns>NAME</columns>
    <columns>Number_of_Insights__c</columns>
    <columns>Meeting_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>